--- a/geonode_formhub/static/css/site_base.css
+++ b/geonode_formhub/static/css/site_base.css
@@ -1,3 +1,8 @@
 #preview_map{
     height: 400px;
 }
+.feature_hover{
+    -moz-box-shadow : 0 0 20px #3366FF;
+    -webkit-box-shadow : 0 0 20px #3366FF;
+    box-shadow : 0 0 20px #3366FF;
+}
