--- a/features/templates/features/crowd_layer_detail.html
+++ b/features/templates/features/crowd_layer_detail.html
@@ -72,7 +72,7 @@
         <h2>{% trans "Crowd contributions" %}</h2>
         <ul class="unstyled space">
           {% for feature in features %} 
-            <li><img id="{{ feature.feature_id }}-img" src="{{ feature.image_url }}" width="100" height="100"></li>
+            <li><img class="feature_img" id="{{ feature.feature_id }}-img" src="{{ feature.image_url }}" width="100" height="100"></li>
           {% empty %}
             <li>{% trans "This layer does not have any contributions yet." %}</li>
           {% endfor %}
@@ -158,6 +158,7 @@
   {% include "_permissions_form_js.html" %}
 
   <script type="text/javascript">
+      var featureLayer, features = {};
       function zoom_to_box(map, bbox){
             var bounds = [
                 [bbox[2], bbox[0]],
@@ -181,30 +182,51 @@
           attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map);
 
-      function toggleFeatureClass(feature){
-        var id = feature.id.split('.')[1];
+      function toggleFeatureClass(id){
         $('#'+id+'-img').toggleClass('feature_hover');
       }
 
+      function highlightFeature(layer){
+        layer.setIcon(hoverIcon);
+      }
+
+      function resetFeature(layer){
+        layer.setIcon(defaultIcon);
+      }
+
       function onEachFeature(feature, layer) {
+          var id = feature.id.split('.')[1];
+          features[id] = layer;
           layer.on({
               mouseover: function(){
-                layer.setIcon(hoverIcon);
-                toggleFeatureClass(feature);
+                highlightFeature(layer);
+                toggleFeatureClass(id);
               },
               mouseout: function(){
-                layer.setIcon(defaultIcon);
-                toggleFeatureClass(feature);
+                resetFeature(layer);
+                toggleFeatureClass(id);
               }
          });
       }
+
+      $('.feature_img').mouseover(function(e){
+        var id = e.target.id.split('-')[0];
+        highlightFeature(features[id]);
+        toggleFeatureClass(id);
+      });
+
+      $('.feature_img').mouseout(function(e){
+        var id = e.target.id.split('-')[0];
+        resetFeature(features[id]);
+        toggleFeatureClass(id);
+      });
 
       $.ajax({
           type: "GET",
           url: "/proxy?url={{ layer.json_url|urlencode }}",
           dataType: 'json',
           success: function (response) {
-              geojsonLayer = L.geoJson(response,{
+              featureLayer = L.geoJson(response,{
                 onEachFeature: onEachFeature
               }).addTo(map);
               zoom_to_box(map, [{{ layer.bbox_string }}]);
