--- a/features/templates/features/crowd_layers.html
+++ b/features/templates/features/crowd_layers.html
@@ -13,9 +13,13 @@
     <div class="span12">
       <h2 class="page-title">{% trans "Explore Crowd Layers" %}</h2>
     </div>
+    {% if layers.count > 0 %}
     {% for layer in layers %}
       {% include "features/_crowd_layer_list_item.html" %}
     {% endfor %}
+    {% else %}
+    <p>There are no crowd layers yet</p>
+    {% endif %}
  {% endblock %}
 
 {% block extra_script %}
